@@ -9,3 +9,6 @@
 20020620 1.41 my $de0, $de1 bug fixed in line 182 of Tea.pm
 20020626 1.42 Install gets default locations right
 20020917 1.43 JS portability bug fixed in ascii2bytes, a[i] to a.charAt(i)
+20020919 1.44 JS portability bug fixed in specifying 32-bit integers
+20030701 FreeBSD bug corrected ($^O now gives freebsd)
+20030901 Tea.pm pjb removed octal number literals from the JS
